feat: se  agregó los uuid en el ms_customer